remaining-tasks/ts-type-checker/environment/visible_tests/aliasInstantiationExpressionGenericIntersectionNoCrash1.errors
aliasInstantiationExpressionGenericIntersectionNoCrash1.ts(13,1): error TS2352: Conversion of type '{ new (): ErrImpl<number>; prototype: ErrImpl<any>; } & (() => number)' to type '{ new (): ErrImpl<string>; prototype: ErrImpl<any>; } & (() => string)' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.
